# scrim-engine

./: .gitignore  CMakeLists.txt
Common/: Launcher.cpp  Launcher.hpp  main.cpp
Dependencies/: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Include/: ApplicationInterfaces.hpp  Debug.hpp  Delegate.hpp  DisplayMode.hpp  Engine.hpp  EngineInterfaces.hpp  IRenderWindow.hpp  IState.hpp  Impl.hpp  InputEvent.hpp  ScrimEngine.hpp  StateCallback.hpp  enums.hpp  types.hpp
GUI/: BitmapFont.cpp  BitmapFont.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Edit.cpp  Edit.hpp  GUI.cpp  GUI.hpp  Label.cpp  Label.hpp  fontdata1.txt  fontdata2.txt
GUI/States/: StateButton.cpp  StateButton.hpp  StateEdit.cpp  StateEdit.hpp  StateMain.cpp  StateMain.hpp
Linux/Launcher/: RenderWindow.cpp  RenderWindow.hpp
Scrims/: Application.cpp  Application.hpp  BaseScrim.cpp  BaseScrim.hpp  BaseState.hpp  CMakeLists.txt  IGame.hpp  Scrim.cpp  Scrim.hpp  dllmain.cpp
Scrims/States/: StateScene.cpp  StateScene.hpp
Tests/: CMakeLists.txt  TestDelegates.cpp  TestInput.cpp  TestStateMachine.cpp  stubs.h
Win/Launcher/: RenderWindow.cpp  RenderWindow.hpp  resource.h
